<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/choosing_task"
    tools:context=".activity.ChooseTaskActivity">

    <TableLayout
        android:layout_width="387dp"
        android:layout_height="385dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="chooseDefault"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:drawableTop="@drawable/baseline_alarm_black_48"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/default_"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="chooseMath"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/tvMath"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:drawableTop="@drawable/ic_math"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/math_problems"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="chooseRecaptcha"
                android:paddingTop="16dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/tvShake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:drawableTop="@drawable/ic_recaptcha"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/recaptcha"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="chooseQR"
                android:paddingTop="16dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/tvQR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@mipmap/qrcode_alarme"
                    android:gravity="center"
                    android:padding="8dp"
                    android:paddingTop="16dp"
                    android:text="@string/qr_code"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>